--- a/.htaccess
+++ b/.htaccess
@@ -36,7 +36,7 @@ DirectoryIndex index.php default.html index.html
   RewriteBase /
   RewriteRule ^index\.php$ - [L]
   RewriteCond %{REQUEST_FILENAME} !-f
-  # RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteCond %{REQUEST_FILENAME} !-d
   RewriteRule . /index.php [L]
 </IfModule>
 
