--- a/.htaccess
+++ b/.htaccess
@@ -33,7 +33,7 @@ DirectoryIndex index.php default.html index.html
 
 <IfModule mod_headers.c>
   <FilesMatch "\.(html|jpg|png|gif|css|js|pdf|ico)$">
-    Header set Cache-Control "max-age=86400, public, must-revalidate"
+    Header set Cache-Control "max-age=0, public, must-revalidate"
     Header unset ETag
     FileETag None
   </FilesMatch>
@@ -55,8 +55,8 @@ DirectoryIndex index.php default.html index.html
   RewriteEngine On
   RewriteBase /
   RewriteRule ^sandbox/(.*) s/sandbox/$1 [QSA,L]
-  RewriteRule ^admin/login/(.*) e/core/wp/wp-login.php$1 [QSA,L]
-  RewriteRule ^admin/(.*) e/core/wp/wp-admin/$1 [QSA,L]
+  # RewriteRule ^admin/login/(.*) e/core/wp/wp-login.php$1 [QSA,L]
+  # RewriteRule ^admin/wp/wp-admin(.*) e/core/wp/wp-admin/$1 [QSA,L]
 </IfModule>
 # END Routing
 
