--- a/.htaccess
+++ b/.htaccess
@@ -26,6 +26,7 @@ Options -Indexes
 # SECURITY END
 
 DirectoryIndex index.php default.html index.html
+# Look for files in this order.
 
 <IfModule mod_deflate.c>
   AddOutputFilterByType DEFLATE text/html text/css application/javascript image/x-icon
@@ -54,9 +55,10 @@ DirectoryIndex index.php default.html index.html
 <IfModule mod_rewrite.c>
   RewriteEngine On
   RewriteBase /
-  RewriteRule ^sandbox/(.*) s/sandbox/$1 [QSA,L]
+
+  # Rewrite non-empty URL /1
   # RewriteRule ^wp-admin/(.*) e/core/wp-admin/$1 [QSA,L]
-  # The admin URL needs to be rewritten for this to work.
+  # Rewrite wp-admin/ to e/core/wp-admin (hide exact directory).
 </IfModule>
 # END Routing
 
@@ -67,7 +69,7 @@ DirectoryIndex index.php default.html index.html
   RewriteRule ^index\.php$ - [L]
   RewriteCond %{REQUEST_FILENAME} !-f
   # RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule . /index.php [L]
+  RewriteRule . /1/index.php [L]
 </IfModule>
 
 # END WordPress
