--- a/.htaccess
+++ b/.htaccess
@@ -68,7 +68,7 @@ DirectoryIndex index.php default.html index.html
   RewriteBase /
   RewriteRule ^index\.php$ - [L]
   RewriteCond %{REQUEST_FILENAME} !-f
-  # RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteCond %{REQUEST_FILENAME} !-d
   RewriteRule . /1/index.php [L]
 </IfModule>
 
