Unignore /0/theme/ and /0/script/, etc.

--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,7 @@ e/bin/themes/twentytwelve/
 # too old!!! (but nice and clean)
 
 m/
-# modelling engine 
+# modelling engine
 
 u/
 # User files!!!
@@ -82,7 +82,7 @@ wp-content/
 
 ### SPECIFIC FOLDERS (MAJOR)
 
-/0/
+/0/media/
 /2/
 /3/
 
