--- a/.htaccess
+++ b/.htaccess
@@ -19,10 +19,7 @@ Options -Indexes
 
 # SECURITY END
 
-DirectoryIndex fallback.html index.php
-# Look for files in this order.
-
-# DirectoryIndex index.php default.html
+DirectoryIndex index.php default.html
 # Look for files in this order.
 
 <IfModule mod_deflate.c>
