--- a/.htaccess
+++ b/.htaccess
@@ -19,7 +19,7 @@ Options -Indexes
 
 # SECURITY END
 
-DirectoryIndex default.html index.php index.html
+# DirectoryIndex default.html index.php index.html
 # Look for files in this order.
 
 <IfModule mod_deflate.c>
