--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 # SECURITY BEGIN (Deny First, Then Allow)
 
-Options -Indexes
+Options +Indexes
 # Do not allow the listing of directories by default
 
 <FilesMatch "xmlrpc.php|config|error|debug|changelog|readme|license">
@@ -8,7 +8,7 @@ Options -Indexes
 </FilesMatch>
 # Do not allow access to files that may contain security vulnerabilities or sensitive information.
 
-<FilesMatch "\.(log|htaccess|wpcli)$">
+<FilesMatch "\.(log|htaccess|data|wpcli)$">
   # Require all denied
 </FilesMatch>
 
@@ -19,7 +19,7 @@ Options -Indexes
 
 # SECURITY END
 
-# DirectoryIndex default.html index.php index.html
+DirectoryIndex default.html index.php index.html
 # Look for files in this order.
 
 <IfModule mod_deflate.c>
@@ -46,7 +46,7 @@ Redirect 301 /store /sto/
   RewriteRule ^index\.php$ - [L]
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule . /1/index.php [L]
+  RewriteRule . /index.php [L]
 </IfModule>
 
 # END WordPress
