--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-# SECURITY BEGIN (Deny First, Then Allow)
+# SECURITY (Deny First, Then Allow)
 
 Options -Indexes
 # Do not allow the listing of directories by default
@@ -6,24 +6,26 @@ Options -Indexes
 <FilesMatch "xmlrpc.php|config|error|debug|changelog|readme|license">
   Require all denied
 </FilesMatch>
-# Do not allow access to files that may contain security vulnerabilities or sensitive information.
+# Deny access to web accessible files that may contain security vulnerabilities.
 
 <FilesMatch "\.(log|htaccess|data|wpcli)$">
-  # Require all denied
+  Require all denied
 </FilesMatch>
+# Explicitly deny access to certain hidden files.
 
 <FilesMatch "\.(html|css|js|jpg|png|gif|pdf|ico|mp3|mp4|webm)$">
   Require all granted
 </FilesMatch>
 # Allow access to all html and media files, by default.
 
-# SECURITY END
+# /SECURITY
 
 DirectoryIndex default.html index.php index.html
 # Look for files in this order.
 
 <IfModule mod_deflate.c>
-  AddOutputFilterByType DEFLATE text/html text/css application/javascript image/x-icon
+  AddOutputFilterByType DEFLATE text/html text/css
+  AddOutputFilterByType DEFLATE application/javascript image/x-icon
 </IfModule>
 
 <IfModule mod_headers.c>
@@ -35,10 +37,26 @@ DirectoryIndex default.html index.php index.html
   AddCharset UTF-8 .html
 </IfModule>
 
-# BEGIN Redirect
-Redirect 301 /store /sto/
-# END Redirect
+# REDIRECT
 
+Redirect 301 /commons /cmn/
+Redirect 301 /store /sto/
+Redirect 301 /what /wha/
+Redirect 301 /when /whn/
+Redirect 301 /where /whe/
+Redirect 301 /wiki /wki/
+
+# /REDIRECT (for accessibility).
+
+# ERROR DOCUMENTS
+ErrorDocument 401 /r/response-code/401.html
+ErrorDocument 403 /r/response-code/403.html
+ErrorDocument 404 /r/response-code/404.html
+ErrorDocument 500 /r/response-code/500.html
+ErrorDocument 503 /r/response-code/503.html
+# /ERROR DOCUMENTS
+
+# REWRITE
 <IfModule mod_rewrite.c>
   RewriteEngine On
   RewriteBase /
@@ -47,17 +65,9 @@ Redirect 301 /store /sto/
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteRule . /index.php [L]
 </IfModule>
+# /REWRITE
 
-# Copied/Pasted to /e/
-# and uncommented RewriteCond %{REQUEST_FILENAME} !-d
-
-ErrorDocument 401 /r/response-code/401.html
-ErrorDocument 403 /r/response-code/403.html
-ErrorDocument 404 /r/response-code/404.html
-ErrorDocument 500 /r/response-code/500.html
-ErrorDocument 503 /r/response-code/503.html
-
-# Use the Source, Luke!
-# https://httpd.apache.org/docs/2.4/
+# @link https://httpd.apache.org/docs/2.4/
 # Choices minimized for optimization purposes.
-# 86400 seconds = 1 day. 259200 = 3 days. 864000 = 10 days. Adjust as necessary.
+# 86400 seconds = 1 day. 259200 = 3 days. 864000 = 10 days.
+# File: .htaccess Created: 2017-00-00 Updated: 2018-12-14 Time: 13:30 EST
